--- a/ChartER/ChartER/ChartER.csproj
+++ b/ChartER/ChartER/ChartER.csproj
@@ -58,6 +58,12 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmNewEntity.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNewEntity.Designer.cs">
+      <DependentUpon>frmNewEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="IformEntity.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -66,6 +72,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmNewEntity.resx">
+      <DependentUpon>frmNewEntity.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
