--- a/ChartER/ERObjects/ERObjects.csproj
+++ b/ChartER/ERObjects/ERObjects.csproj
@@ -44,9 +44,11 @@
   <ItemGroup>
     <Compile Include="Attribute.cs" />
     <Compile Include="Chart.cs" />
+    <Compile Include="Element.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Link.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stub.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
