Implemented Clean-Up via Threading

--- a/ChartER/ChartViews/ChartViews.csproj
+++ b/ChartER/ChartViews/ChartViews.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="CleanUpView.cs" />
     <Compile Include="GridViewer.cs">
       <SubType>Form</SubType>
     </Compile>
